setting up the proteus module containers; conda does not want to build

--- a/nextflow.config
+++ b/nextflow.config
@@ -31,7 +31,7 @@ params {
     // Feature options
     features                    = null
     features_type               = 'gene'
-    features_id_col             = 'gene_id'
+    features_id_col             = 'probe_id'
     features_name_col           = 'gene_name'
     features_metadata_cols      = 'gene_id,gene_name,gene_biotype'
 
