figuring out how best to add a second logo dynamically

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,11 +21,13 @@ params {
 
     // Reporting
     logo_file                  = "${projectDir}/docs/images/nf-core-differentialabundance_logo_light.png"
+    additional_logo_file       = null
     css_file                   = "${projectDir}/assets/nf-core_style.css"
     citations_file             = "${projectDir}/CITATIONS.md"
     report_file                = "${projectDir}/assets/differentialabundance_report.Rmd"
     report_title               = null
     report_author              = null
+    report_summary             = null
     report_description         = null
 
     // Sample sheet options
