--- a/conf/modules.config
+++ b/conf/modules.config
@@ -469,7 +469,7 @@ process {
             (params.filtering_min_proportion ? "--minimum_proportion ${params.filtering_min_proportion}" : ''),
             (params.filtering_grouping_var ? "--grouping_variable \"${params.filtering_grouping_var}\"" : ''),
             (params.filtering_min_proportion_not_na ? "--minimum_proportion_not_na \"${params.filtering_min_proportion_not_na}\"" : ''),
-            (params.filtering_min_samples_not_na ? "--minimum_samples_not_na \"${params.filtering_min_samples_not_na}\"" : '')
+            (params.filtering_min_samples_not_na || params.filtering_min_samples_not_na == 0 ? "--minimum_samples_not_na \"${params.filtering_min_samples_not_na}\"" : '')
         ].join(' ').trim()
     }
 
